--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <title>Menu of the week</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" type="text/css" href="css/menustyle.css">
+  <script src="https://kit.fontawesome.com/0e4d6b91cd.js" crossorigin="anonymous"></script>
 </head>
 <body>
 <section id="app">
@@ -452,13 +453,10 @@
                   <article id="recipe-info">
                   <div id="recipe-header">
                     <h3>{{ recipe.title }}</h3>
-                    <input type="image"
-                           src="img/icon/outline_delete_black_24dp.png"
-                           alt="delete"
-                           class="delete"
-                           title="delete recipe"
-                           v-show="selectedIndex === index"
-                           @click="deleteRecipe">
+                    <i class="far fa-trash-alt"
+                       title="delete recipe"
+                       v-show="selectedIndex === index"
+                       @click="deleteRecipe"></i>
                   </div>
                   <div v-show="selectedIndex === index">
                     <ul>
