--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   </main>
 
 </section>
-<script src="https://cdn.jsdelivr.net/npm/vue@2/dist/vue.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/vue@2.6.12"></script>
 <script src="https://unpkg.com/vuex@3.6.2/dist/vuex.js"></script>
 <script src="js/index.js"></script>
 </body>
